# Huffman-Encoding-and-Compression

./: meson.build
data/: check0c.txt  check0tc.txt  check1c.txt  check1tc.txt  check2c.txt  check2tc.txt  check2tu.txt  check3tc.txt  check4.txt  check4tc.txt  decodewar.txt  encodewar.txt
rebuild/: build.ninja  compile_commands.json
rebuild/meson-info/: intro-buildsystem_files.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
rebuild/meson-logs/: meson-log.txt
src/: compress.cpp  meson.build  uncompress.cpp
src/bitStream/: meson.build
src/bitStream/input/: BitInputStream.cpp  BitInputStream.hpp  meson.build
src/bitStream/output/: BitOutputStream.cpp  BitOutputStream.hpp  meson.build
src/encoder/: HCNode.hpp  HCTree.cpp  HCTree.hpp  meson.build
test/: meson.build  test_BitInputStream.cpp  test_HCTree.cpp
